--- a/.gitattributes
+++ b/.gitattributes
@@ -1,14 +1,4 @@
-* text=auto
-/gradlew text eol=lf
-*.bat text eol=crlf
-*.ps1 text eol=crlf
-*.java text eol=lf
-*.xml text eol=lf
-*.properties text eol=lf
-*.yml text eol=lf
-*.md text eol=lf
-*.sh text eol=lf
-*.jar binary
-*.gradle text eol=lf
-*.gitattributes text eol=lf
-*.gitignore text eol=lf
+* text eol=lf
+*.bat           text eol=crlf
+*.cmd           text eol=crlf
+*.ps1           text eol=crlf
