--- a/.github/workflows/build-artifact.yml
+++ b/.github/workflows/build-artifact.yml
@@ -35,6 +35,7 @@ jobs:
         retention-days: 7
 
   dependency-submission:
+    needs: build
     runs-on: ubuntu-latest
     permissions:
       contents: write
